--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ appdirs==1.4.3
 attrs==19.1.0
 black==19.3b0
 Click==7.0
+dj-database-url==0.5.0
 Django==2.2.2
+django-heroku==0.3.1
+gunicorn==19.9.0
 mysqlclient==1.4.2.post1
+psycopg2==2.8.3
 pytz==2019.1
 sqlparse==0.3.0
 toml==0.10.0
